@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4254] Bugfix: Document that geo coordinates must be floats
 - [#4247] Feature: Add an Identity interface
 - [#4243] Feature: Add a Google Map ViewHelper
 - [#4256] Cleanup: Change "EMailAddress" to "EmailAddress" in all function and method names so they are true CamelCase
